--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/1. 注册账户/1.2 注册社区版.md
@@ -2,7 +2,7 @@
 
 #### 1.2 注册社区版
 
-全自动开发平台社区版可供非企业或开源开发者们免费访问，其功能有一定的限制，具体可点击平台版本查看。本节主要介绍注册并登录社区版的具体操作方法。
+全自动开发平台社区版可供非企业或开源开发者们免费访问，其功能有一定的限制，具体可点击[平台版本](https://feisuanyz.com/platformVersion/?productCategoryId=5f8deeb2dc018d0008854ace&id=flowv)查看。本节主要介绍注册并登录社区版的具体操作方法。
 
 ##### 1.2.1 前提条件
 
