--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/3. 集成监控接口.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/3. 集成监控接口.md
@@ -97,17 +97,17 @@ metrics-report:
 
 b）启动本地客户端或者本地执行引擎项目，如图3-6所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-6.png)
+![image](https://user-images.githubusercontent.com/79617492/171142968-67508884-a511-4450-83d3-f4926ffffa69.png)
 
 ##### 图3-6 启动项目
 
 c）打开接口的监控开关及字段采集数据，如图3-7、图3-8所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-7.png)
+![image](https://user-images.githubusercontent.com/79617492/171142998-287d14e7-7795-4204-9e54-0e2abbdc17f8.png)
 
 ##### 图3-7 打开监控
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-8.png)
+![image](https://user-images.githubusercontent.com/79617492/171143021-6b9e01f9-25d0-478d-a48f-060168e439aa.png)
 
 ##### 图3-8 采集数据
 
@@ -115,43 +115,43 @@ d）运行接口即可开启接口监控数据采集。
 
 e）通过工具（如示例工具` xshell `）连接上配置文件中的` infludb `数据库，查看数据库中监控到的接口信息，如图3-9所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-9.png)
+![image](https://user-images.githubusercontent.com/79617492/171143049-6f629da8-a18c-4b2e-ae53-940a1e86ee94.png)
 
 ##### 图3-9 查看接口信息
 
 f）输入命令` influx `连接，可以看到当前数据口连接的版本和地址，如图3-10所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-10.png)
+![image](https://user-images.githubusercontent.com/79617492/171143065-fca576b9-00e1-4619-b93d-369b4a2126cf.png)
 
 ##### 图3-10 查看版本和地址
 
 g）输入命令` auth `，登录数据库的账户密码（该账号密码需与application.yml配置文件中的数据库连接信息保持一致），如图3-11所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-11.png)
+![image](https://user-images.githubusercontent.com/79617492/171143095-f226db0d-8f6b-42ae-b319-faaf63ca100d.png)
 
 ##### 图3-11 登陆数据库
 
 h）输入命令` show databases `，显示所有数据库信息，如图3-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-12.png)
+![image](https://user-images.githubusercontent.com/79617492/171143119-38484ab4-51aa-4a4a-bd6a-aa2c82018569.png)
 
 ##### 图3-12 显示数据库信息
 
 i）输入命令` use flowcore_influxdb_dev `，切换进入配置文件中配置的` flowcore_influxdb_dev `数据库，如图3-13所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-13.png)
+![image](https://user-images.githubusercontent.com/79617492/171143140-8a57bf56-28d2-41fc-ab20-0b0239e9d634.png)
 
 ##### 图3-13 进入数据库
 
 j）输入命令` show measurements `，显示` flowcore_influxdb_dev `数据库中所有的表，如图3-14所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-14.png)
+![image](https://user-images.githubusercontent.com/79617492/171143164-daefa1f4-6b1c-459f-bfd8-ed896e752ff1.png)
 
 ##### 图3-14 显示所有表
 
 其中的表字段注释：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-15.png)
+![image](https://user-images.githubusercontent.com/79617492/171143198-ffa8c25b-cb57-4403-85d2-6796cdc1c5d2.png)
 
 ##### 图3-15 显示所有表
 
@@ -163,7 +163,7 @@ flowcore_server_request_ interfaceId _total ：单个接口的所有请求信息
 
 k）进入到全自动开发平台，双击打开对应接口，查看上方该接口的URL地址，将鼠标移动到地址的后面可以看到该接口的interfaceId，如图3-16所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/3-16.png)
+![image](https://user-images.githubusercontent.com/79617492/171143224-b698b832-cf76-417b-9456-2b97ec1c1bc2.png)
 
 ##### 图3-16 查看interfaceId
 
