--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/18. 接口文档/1. 接口文档.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/18. 接口文档/1. 接口文档.md
@@ -8,34 +8,33 @@
 
 a）在项目管理页面中选择“接口管理”，系统显示“接口管理”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_10-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145258-2fae67a9-f85d-411f-8a1a-b5dd123778d8.png)
 
 ##### 图1-1 接口管理页面
 
 b）单击“接口文档”，进入“接口文档”主页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_10-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145322-d0255c3b-70e5-42d5-990a-a2598df2c22b.png)
 
 ##### 图1-2 接口文档页面
 
 c）选择j接口模块下的接口，进入接口详情页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_10-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145359-88ba4404-ffdc-461e-bf26-5dcd20e8dd89.png)
 
 ##### 图1-3 接口详情页面
 
 d）选择调试”，进入接口调试页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_10-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145407-cd363643-6f51-4004-a4a8-75f2d7305ca5.png)
 
 ##### 图1-4 接口调测页面
 
 e）单击“发送”，调测接口结果如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/ks-image/ks_10-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145442-b46cd496-6371-4145-87a6-404d203597e4.png)
 
 ##### 图1-5 调测结果页面
-
 
 #### 1.2 输出结果文档说明示例
 
@@ -45,12 +44,12 @@ e）单击“发送”，调测接口结果如图1-5所示：
 
 a） 进入项目，单击“接口文档”，进入“接口文档”主页面，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_19_2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/171145484-a4a87150-9a4e-42af-8f2b-77dce2280efe.png)
 
 ##### 图1-6 进入接口文档页面
 
 b）选择对应接口，在页面右方即可看到输出结果组件的所有信息，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_19_2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/171145505-0b639884-62da-4551-bdd5-aab521d87b46.png)
 
 ##### 图1-7 输出结果组件信息
