--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/19. JAR包依赖图/1. JAR包依赖图.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/19. JAR包依赖图/1. JAR包依赖图.md
@@ -8,18 +8,18 @@
 
 a）选择已经创建项目的卡片，选择“Jar包依赖图”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_16-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145649-7f867b5b-1929-4dfb-aefc-f9dfeffe8e91.png)
 
 ##### 图1-1 Jar包依赖图页面
 
 b）在搜索框中输入查询的条件，系统自动加载该项目的JAR依赖包的关系，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_16-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145661-50de8c85-a5fb-4414-a9a7-522861d4c28e.png)
 
 ##### 图1-2 项目JAR包依赖关系
 
 c）在搜索后选择“CLASS”查询条件，输入需要查询的信息，系统自动加载Class依赖的JAR包，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_16-03_img.png)
+![image](https://user-images.githubusercontent.com/79617492/171145695-21a34dbd-7075-467c-ab13-69ec2fe50700.png)
 
 ##### 图1-3 查看Class依赖的JAR包
