--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/2. 组件管理/1. 组件管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/2. 组件管理/1. 组件管理.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“组件列表”，系统显示“组件列表”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/4-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/172353156-636da4d3-d9a4-4396-bd47-8021e9b6444e.png)
 
 ##### 图1-1 组件列表页面
 
 b）单击“导入”，系统显示“导入组件”页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/3zujian/1.png)
+![image](https://user-images.githubusercontent.com/79617492/172353232-5a9a485d-d39c-4fb7-be4d-7c5e5c75c399.png)
 
 ##### 图1-2 导入组件页面
 
