--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/2. 组件管理/1. 组件管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/2. 组件管理/1. 组件管理.md
@@ -112,19 +112,20 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“模块列表”，系统显示“模块列表”页面，如图1-8所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-8.png)
+![image](https://user-images.githubusercontent.com/79617492/172576682-bccb94b9-7eea-4059-9ff9-7446a3384825.png)
 
 ##### 图1-8 模块列表页面
 
 b）单击“svg图标管理”，系统显示“svg图标管理”页面，如图1-9所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-9.png)
+![image](https://user-images.githubusercontent.com/79617492/172576719-0d83912d-7041-48fd-ac7a-d9303eb40d5e.png)
 
 ##### 图1-9 svg图标管理页面
 
 c）在“svg图标列表“找到需要复制的svg图标，单击“复制”图标，如图1-10所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-10.png)
+![image](https://user-images.githubusercontent.com/79617492/172576755-b423146f-2c19-47f8-bcce-dc321bc4dfbc.png)
+
 ##### 图1-10 svg图标管理页面
 
 系统提示“复制成功”。
@@ -143,19 +144,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“模块列表”，系统显示“模块列表”页面，如图1-11所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-11.png)
+![image](https://user-images.githubusercontent.com/79617492/172576798-29c00bd7-e738-46aa-bec8-c03e3fdca10f.png)
 
 ##### 图1-11 模块列表页面
 
 b）单击“svg图标管理”，系统显示“svg图标管理”页面，如图1-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-12.png)
+![image](https://user-images.githubusercontent.com/79617492/172576818-9fe969b3-f4e8-4a70-9ad0-3c6c0c97717c.png)
 
 ##### 图1-12 svg图标管理页面
 
 c）在“svg图标列表“找到需要删除的svg图标，单击“删除”图标，如图1-13所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-13.png)
+![image](https://user-images.githubusercontent.com/79617492/172576838-3319592f-5627-4a0a-a3f9-f1bcd71b0d14.png)
 
 ##### 图1-13 svg图标管理页面
 
@@ -175,19 +176,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“模块列表”，系统显示“模块列表”页面，如图1-14所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-14.png)
+![image](https://user-images.githubusercontent.com/79617492/172577018-4efb4a55-2239-4150-85e7-540eced4d904.png)
 
 ##### 图1-14 模块列表页面
 
 b）单击“svg图标管理”，系统显示“svg图标管理”页面，如图1-15所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-15.png)
+![image](https://user-images.githubusercontent.com/79617492/172577049-0a2cb015-001b-4e5f-8d37-7df93425f2da.png)
 
 ##### 图1-15 svg图标管理页面
 
 c）在“svg图标管理”区域，单击“查询栏”，输入“查询条件”，如图1-16所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1-16.png)
+![image](https://user-images.githubusercontent.com/79617492/172577074-0def3099-3223-4378-98f3-dc3f9f4d336f.png)
 
 ##### 图1-16 svg图标查询页面
 
