--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/21. 拦截器/1. 拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/21. 拦截器/1. 拦截器.md
@@ -8,23 +8,23 @@
 
 a）进入全自动开发平台功能模块界面，选择“拦截器”功能模块，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/ljq/1.png)
+![image](https://user-images.githubusercontent.com/79617492/172578091-f818630b-faca-4e44-9359-e8d8f8d4e7ae.png)
 
 ##### 图1-1 选择拦截器功能
 
 b）单击“新增拦截器模块”，系统弹出新增拦截器模块页面，如图1-2、图1-3所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/ljq/2.png)
+![image](https://user-images.githubusercontent.com/79617492/172578120-a9f886b1-3d97-4f1f-8564-bf472c24e46b.png)
 
 ##### 图1-2 单击新增拦截器模块
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/ljq/3.png)
+![image](https://user-images.githubusercontent.com/79617492/172578148-58b61fa0-c173-4c94-9c54-4f2f33d50692.png)
 
 ##### 图1-3 新增拦截器模块
 
 c）输入拦截器模块的名称和描述，单击“确定”，可以看到拦截器模块新增成功，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/ljq/4.png)
+![image](https://user-images.githubusercontent.com/79617492/172578169-c229ad28-a778-46c6-b311-abcb1d6a3632.png)
 
 ##### 图1-4 新增成功
 
@@ -46,13 +46,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选中拦截器模块，单击添加按钮，选择“新增拦截器”，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/ljq/5.png)
+![image](https://user-images.githubusercontent.com/79617492/172578213-b8fe39e4-4560-4ca7-b48e-83a8bd6ad36a.png)
 
 ##### 图1-5 新增拦截器
 
 b）填写拦截器的基本信息，执行类型选择接口前执行，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/172578244-184a5f24-7c3b-4f3e-9f5f-90e560e20931.png)
 
 ##### 图1-6 选择接口前执行
 
@@ -60,7 +60,7 @@ c）填写完成后，单击“提交”。
 
 d）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/172578303-b459947c-a618-4399-a45d-35f4b0ba2337.png)
 
 ##### 图1-7 绘制流程图
 
@@ -84,13 +84,13 @@ h）测试用例成功后，继续对接口进行拦截器白名单设置。
 
 i）单击“接口管理”，单击“新增接口模块”旁边的三个点符号，选择“拦截器白名单设置”，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/172578355-eeff3746-971a-401e-ba3f-a420c5f77e24.png)
 
 ##### 图1-8 选择拦截器白名单设置
 
 j）选择对应的拦截器，勾选对应的接口，单击“应用”即可，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/172578409-02cd2c71-be16-4535-88c8-0633e57ee188.png)
 
 ##### 图1-9 应用接口前执行拦截器
 
@@ -100,7 +100,7 @@ a）选中拦截器模块，单击添加按钮，选择“新增拦截器”。
 
 b）填写拦截器的基本信息，执行类型选择接口后执行，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_07.png)
+![image](https://user-images.githubusercontent.com/79617492/172578448-c067dcb1-00dc-4eb6-8304-8c166d786cc9.png)
 
 ##### 图1-10 选择接口后执行
 
@@ -108,7 +108,7 @@ c）单击“下一步”。
 
 d）单击“选择输出结果”，选择输出结果项，如图1-11所示：
 
-![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_08.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-11.png)
 
 ##### 图1-11 选择输出结果项
 
@@ -120,7 +120,7 @@ f）单击“提交”。
 
 g）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-12所示：
 
-![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-12.png)
 
 ##### 图1-12 绘制流程图
 
