--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/21. 拦截器/1. 拦截器.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/21. 拦截器/1. 拦截器.md
@@ -108,7 +108,7 @@ c）单击“下一步”。
 
 d）单击“选择输出结果”，选择输出结果项，如图1-11所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-11.png)
+![image](https://user-images.githubusercontent.com/79617492/172578526-421a8dd7-7bab-4a74-9562-6b5b5a8985d0.png)
 
 ##### 图1-11 选择输出结果项
 
@@ -120,7 +120,7 @@ f）单击“提交”。
 
 g）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/21.%20%E6%8B%A6%E6%88%AA%E5%99%A8/1-12.png)
+![image](https://user-images.githubusercontent.com/79617492/172578551-c35a0cb9-4dd2-4117-a2ed-dab75c26de1b.png)
 
 ##### 图1-12 绘制流程图
 
