--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/22. 初始化器/1. 初始化器.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/22. 初始化器/1. 初始化器.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）单击“初始化器”，选择“新增初始化器”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_01.png)
+![image](https://user-images.githubusercontent.com/79617492/172578823-95054f84-f75f-4195-ab6b-ecde2e4a0649.png)
 
 ##### 图1-1 新增初始化器
 
 b）填写初始化器的基本信息，执行类型选择顺序执行或者异步执行，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/172578856-e1aa2317-af8e-436a-9713-136896bbb3b0.png)
 
 ##### 图1-2 填写基本信息
 
@@ -30,7 +30,7 @@ c）设置初始化器的状态是启用/停用，单击“下一步”。
 
 d）单击“新增入口参数”，根据需求填写入参值，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_03.png)
+![image](https://user-images.githubusercontent.com/79617492/172578896-099f4e3e-f896-4c00-9520-a38254b40336.png)
 
 ##### 图1-3 新增入口参数
 
@@ -44,7 +44,7 @@ g）单击“提交”。
 
 h）单击“执行初始化器”，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/172578931-65d36dad-25d0-4a4e-b9bf-30fa6b4585b8.png)
 
 ##### 图1-4 执行初始化器
 
