--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/24. 变量字段类型/1. 变量字段类型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/24. 变量字段类型/1. 变量字段类型.md
@@ -8,23 +8,23 @@
 
 a）进入全自动开发平台功能模块界面，选择“变量字段类型”功能模块，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/1.png)
+![image](https://user-images.githubusercontent.com/79617492/172808467-45c93cba-67a4-42cf-9026-adbed8e7e445.png)
 
 ##### 图1-1 选择功能模块
 
 b）单击“新增变量字段类型模块”，系统弹出新增变量字段类型模块页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/2.png)
+![image](https://user-images.githubusercontent.com/79617492/172808506-e43eed5b-81ec-4905-bdbe-6acaac697edd.png)
 
 ##### 图1-2 选择功能模块
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/3.png)
+![image](https://user-images.githubusercontent.com/79617492/172808519-10df4d3f-2a36-4ab8-b719-0fbd59303f65.png)
 
 ##### 图1-3 新增模块页面
 
 c）输入变量字段类型模块的名称和描述，单击“确定”，可以看到变量字段类型模块新增成功，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/4.png)
+![image](https://user-images.githubusercontent.com/79617492/172808536-c1465b3e-ec37-4baa-bae0-5823dd137f3e.png)
 
 ##### 图1-4 新增成功
 
@@ -44,25 +44,25 @@ a）首先用户需要在java编译器中编写好自定义程序，并打包成
 
 b）单击平台菜单栏的“扩展Jar包”选项，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/2.png)
+![image](https://user-images.githubusercontent.com/79617492/172808565-00b506e3-d99f-436a-8297-031d28764b2e.png)
 
 ##### 图1-5 扩展Jar包页面
 
-C）单击“导入”导入Jar包，如图1-6所示：
+c）单击“导入”导入Jar包，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_26_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/172808587-3a538ee3-0404-4cde-914b-15e49356997d.png)
 
 ##### 图1-6 导入Jar包
 
 d）Jar包导入完成后，进入“变量字段类型”功能，选中变量字段类型模块，单击添加按钮，选择“新增变量字段类型”，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/5.png)
+![image](https://user-images.githubusercontent.com/79617492/172808610-cebb4956-f306-4e10-8955-319712ee5b5c.png)
 
 ##### 图1-7 变量字段类型模块
 
 e）输入Jar包的包路径名，单击“查询”查询对应的字段类型名称，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_26_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/172808640-53a6db7a-bbf6-44aa-86ef-6070e0db4550.png)
 
 ##### 图1-8 新增变量字段类型
 
