--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/27. TCP和UDP模型管理/1. TCP和UDP模型管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/27. TCP和UDP模型管理/1. TCP和UDP模型管理.md
@@ -90,66 +90,66 @@ a）进入全自动开发平台，选择对应项目进入功能模块界面。
 
 b）单击“TCP/UDP模型管理 > 新增TCP/UDP模型”，如图1-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-12.png)
+![image](https://user-images.githubusercontent.com/79617492/172811152-2c72749f-6d83-42e6-8bd7-28f77a8528a7.png)
 
 ##### 图1-12 TCP/UDP模型管理
 
 c）配置模型的基本信息，协议选择“UDP协议”，单击“下一步”，如图1-13所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-13.png)
+![image](https://user-images.githubusercontent.com/79617492/172811177-56e91e86-021c-49c6-b57b-e68110e91e31.png)
 
 ##### 图1-13 配置UDP模型的基本信息
 
 d）根据实际需求配置入口参数，单击“提交”，如图1-14所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-14.png)
+![image](https://user-images.githubusercontent.com/79617492/172811221-8fb4acdd-fac6-4669-ae9e-696fc3edc976.png)
 
 ##### 图1-14 配置入口参数
 
 e）单击“进入模型编辑”，如图1-15所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-15.png)
+![image](https://user-images.githubusercontent.com/79617492/172811239-679627a4-5037-41d7-b1d6-988310eb8485.png)
 
 ##### 图1-15 进入模型编辑
 
 f）根据实际需求绘制流程图，绘制完成后单击“保存”，如图1-16所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-16.png)
+![image](https://user-images.githubusercontent.com/79617492/172811255-57c24320-0f20-400e-9777-ad4a6af8cf1e.png)
 
 ##### 图1-16 绘制流程图
 
 g）退出窗体视图，单击“提交”后的三个点按钮，选择“发布模型”，如图1-17所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-17.png)
+![image](https://user-images.githubusercontent.com/79617492/172811272-2712212c-efa8-4fc8-8faf-2ba5addde777.png)
 
 ##### 图1-17 发布模型
 
 h）单击“上线模型”，如图1-18所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-18.png)
+![image](https://user-images.githubusercontent.com/79617492/172811295-818faf46-8cb6-45ce-aced-009ee84a5dcc.png)
 
 ##### 图1-18 上线模型
 
 i）上线成功，UDP模型图标变成绿色打勾，如图1-19所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-19.png)
+![image](https://user-images.githubusercontent.com/79617492/172811323-120bff6c-4ba2-48d6-88ac-742ee7bc744e.png)
 
 ##### 图1-19 上线成功
 
 j）对UDP模型接口进行测试用例，如图1-20所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-20.png)
+![image](https://user-images.githubusercontent.com/79617492/172811357-bf176bac-f2df-4028-95bc-f350fb322fcb.png)
 
 ##### 图1-20 选择测试用例
 
 k）勾选测试用例，单击“执行”，如图1-21所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-21.png)
+![image](https://user-images.githubusercontent.com/79617492/172811383-1880df1a-31d9-4b9f-88fb-82da1dc53b42.png)
 
 ##### 图1-21 执行测试用例
 
 l）UDP模型接口执行成功，查看执行结果，如图1-22所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/27.%20TCP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-22.png)
+![image](https://user-images.githubusercontent.com/79617492/172811727-07ef6e5b-89ff-4bbd-b9cf-881cf441df3b.png)
 
 ##### 图1-22 查看执行结果
