--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/3. 插件中心/1. 插件中心.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/3. 插件中心/1. 插件中心.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“插件中心”，系统显示“插件中心”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/5-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173031956-aad1ad10-c8ef-4a00-b71c-b50c36a0a0a3.png)
 
 ##### 图1-1 插件中心页面
 
 b）在“插入中心”页面，单击“导入”，系统显示“导入插件”页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/4chajian/1.png)
+![image](https://user-images.githubusercontent.com/79617492/173031986-3cc39c63-70cb-403d-af06-95d217c865d4.png)
 
 ##### 图1-2 导入插件
 
@@ -52,14 +52,14 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“插件中心”，系统显示“插件中心”页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/5-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173032022-e9246b12-2d14-4966-8796-c763ed64e242.png)
 
 ##### 图1-3 插件中心页面
 
-b） 在查询条件区域，输入相应的查询条件，单击“Enter”键，如图1-4所示：
+b）在查询条件区域，输入相应的查询条件，单击“Enter”键，如图1-4所示：
 
 系统显示符合查询的信息。
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/5-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173032037-278d8ed4-7ca9-47cc-9828-9bf4e42099b2.png)
 
 ##### 图1-4 查看插件页面
