--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/4. 扩展JAR包/1. 扩展JAR包.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/4. 扩展JAR包/1. 扩展JAR包.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“扩展Jar包”，系统显示“扩展Jar包”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_5.1-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035544-3264c12d-06b6-454d-b2b6-c13fadeb8c86.png)
 
 ##### 图1-1 扩展Jar包页面
 
 b）在“扩展Jar包”页面，单击“导入”，系统显示“导入JAR包”页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_5.1-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035635-d3558851-707a-4530-9f77-e3fc8e473620.png)
 
 ##### 图1-2 导入Jar包页面
 
@@ -48,13 +48,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“扩展Jar包”，系统显示“扩展Jar包”页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_5.2-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035688-91422c37-96db-4106-a6e8-d1963637aebc.png)
 
 ##### 图1-3 扩展Jar包页面
 
 b）在“扩展Jar包”页面，单击“上传父pom文件”，系统显示“上传父pom文件”页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_5.2-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035719-1c2b488b-bc1a-4334-b952-8ca899671dc5.png)
 
 ##### 图1-4 上传父pom文件
 
@@ -76,12 +76,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“扩展Jar包”，系统显示“扩展Jar包”页面，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_5.3-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035762-9ed4e245-9944-4858-8b24-f8b2be7f3dbd.png)
 
 ##### 图1-5 插件中心页面
 
 b）在查询条件区域，输入相应的查询条件，单击“Enter”键，系统显示符合查询的信息，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_5.3-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035792-04a324a7-bc8c-4134-8f0a-f49a559c8eda.png)
 
 ##### 图1-6 插件中心页面
