--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/5. 函数库中心/1. 函数库中心.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/5. 函数库中心/1. 函数库中心.md
@@ -20,13 +20,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“函数库中心”，系统显示“函数库中心”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/6-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173035991-95e24ae3-3d51-4891-ae5a-cb31639c8c65.png)
 
 ##### 图1-1  函数库中心
 
 b）在“函数库中心”区域，单击“导入”，系统显示“导入函数”页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/6hanshu/1.png)
+![image](https://user-images.githubusercontent.com/79617492/173036031-47a8091e-cdac-4336-b500-dfcf619848ce.png)
 
 ##### 图1-2  导入函数
 
@@ -54,19 +54,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“函数库中心”，系统显示“函数库中心”页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/6-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036054-b9b765c3-f50b-4184-9c8b-d67ec447f344.png)
 
 ##### 图1-3  函数库中心
 
 b）在“自定义函数库”区域，选择需要查看的函数文件，单击“查看”，系统显示“函数列表”页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/6-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036084-d4d2f849-1a01-4ea5-a0cb-ab13ca627ef6.png)
 
 ##### 图1-4 函数列表
 
 c）在查询条件区域，输入相应的查询条件，系统显示符合查询的信息，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/6-7_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036122-ec2ef1db-46a5-4609-a513-a663400dd1e0.png)
 
 ##### 图1-5 查看函数
 
@@ -84,19 +84,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“函数库中心”，系统显示“函数库中心”页面，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/6-10_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036163-7792a154-4472-4949-b9eb-022b0fa4d18d.png)
 
 ##### 图1-6 函数库中心
 
 b）在“系统函数”区域，选择需要查看的函数文件，单击“查看”，系统显示“函数列表”页面，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/6-11_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036205-3197d4c1-b49e-4092-91cb-cd332d7c6d6e.png)
 
 ##### 图1-7 函数列表
 
 c） 在查询条件区域，输入相应的查询条件，系统显示符合查询的信息，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/6-12_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173036233-9720a45e-c4ab-4472-9326-5ffd0a2c6f68.png)
 
 ##### 图1-8 查看函数
 
@@ -114,13 +114,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“函数库中心”，系统显示“函数库中心”页面，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/6function/function_2.png)
+![image](https://user-images.githubusercontent.com/79617492/173036268-4c253530-c148-4f24-b333-d78a59a97ddb.png)
 
 ##### 图1-9 函数库中心
 
 b）选择“平台级自定义函数”，系统将显示平台级自定义函数列表，选择需要查看的函数文件，单击“查看”，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/6function/function_2.png)
+![image](https://user-images.githubusercontent.com/79617492/173036307-529230da-4529-4341-998a-c4214bf86193.png)
 
 ##### 图1-10 函数列表
 
