--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/6. 数据库配置/1. 数据库管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/6. 数据库配置/1. 数据库管理.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“数据库配置管理 > 默认数据库管理”，系统显示“默认数据库管理”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_7-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173320577-066761cf-50cf-46b7-a55c-6bbc87e5acb8.png)
 
 ##### 图1-1 默认数据库管理页面
 
 b） 打开“是否启用”列的开关，启用后的数据库，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_7-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173320606-b338c327-0c56-47bf-885b-e569f2f6b8aa.png)
 
 ##### 图1-2 启用数据库
 
@@ -40,13 +40,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“数据库配置管理 > 默认数据库管理”，系统显示“默认数据库管理”页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_7-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173320626-c8cd7ac8-d26f-40e5-9247-b9eceab76f4f.png)
 
 ##### 图1-3 默认数据库管理页面
 
 b）选择需要关闭的数据库，关闭“是否启用”列的开关，关闭后的数据库，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_7-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173320648-5ef89359-9534-48e7-80a4-ebaee94f58d1.png)
 
 ##### 图1-4 关闭数据库
 
