--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/6. 数据库配置/3. 数据列管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/6. 数据库配置/3. 数据列管理.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“数据库配置管理 > 默认数据列表管理”，系统显示“默认数据列表管理”页面，如图3-1所示：
 
-![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_7-11_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173320999-d6291747-b7a9-4842-bad9-ad274ffac8ff.png)
 
 ##### 图3-1 默认数据列表管理页面
 
 b）单击“新增”，系统新增一行数据列表，如图3-2所示：
 
-![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_7-12_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173321019-658450d1-e3e7-4229-97f4-3a1a86662dbe.png)
 
 ##### 图3-2 新增数据列表
 
@@ -42,13 +42,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“数据库配置管理 > 默认数据列表管理”，系统显示“默认数据列表管理”页面，如图3-3所示：
 
-![3-3](https://www.feisuanyz.com/fsimage/zc-image/3-13_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173321032-c6121ca1-5da9-4631-8868-95a3e469e09e.png)
 
 ##### 图3-3 默认数据列表管理页面
 
 b） 选择需要修改的数据列表，进行修改数据列表信息，如图3-4所示：
 
-![3-4](https://www.feisuanyz.com/fsimage/zc-image/3-14_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173321058-7215af29-451e-4592-b75c-7aa0762c6415.png)
 
 ##### 图3-4 修改数据列表
 
@@ -68,7 +68,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“数据库配置管理 > 默认数据列表管理”，系统显示“默认数据列表管理”页面，如图3-5所示：
 
-![3-5](https://www.feisuanyz.com/fsimage/zc-image/cz_7-15_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173321087-e74f80f7-6688-45aa-920d-0dc2b9c05316.png)
 
 ##### 图3-5 默认数据列表管理页面
 
