--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/7. 系统配置/1. 系统配置.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/7. 系统配置/1. 系统配置.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“系统配置”，系统显示“系统配置”页面，如图1-1所示。
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/8-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325140-1faa6b0d-aab7-4da0-b3d0-3020f4616037.png)
 
 ##### 图1-1 系统配置页面
 
 b）单击“新增”，系统显示“新增全局配置”页面，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/8-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325345-3540aeaa-fc5a-4692-ba1e-d1263ccfe5b7.png)
 
 ##### 图1-2 新增全局配置页面
 
@@ -40,15 +40,15 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 1.1.1 操作步骤
 
-a）选择“系统配置”，系统显示“系统配置”页面，如图1-3所示。
+a）选择“系统配置”，系统显示“系统配置”页面，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/8-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325378-741bf585-4b54-49b1-9c7b-3fa211e4d3c9.png)
 
 ##### 图1-3 系统配置页面
 
 b）选择需要修改的系统配置，单击“修改”，系统显示“修改全局配置”页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/8-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325416-211612c2-39b3-4394-86ee-17c7ba6283b4.png)
 
 ##### 图1-4 修改全局配置页面
 
@@ -70,7 +70,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“系统配置”，系统显示“系统配置”页面，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/8-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325593-c8e0b1c6-b428-43e5-8ad2-c6900908f5c5.png)
 
 ##### 图1-5 系统配置页面
 
@@ -92,7 +92,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“系统配置”，系统显示“系统配置”页面，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/8-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173325624-e6b37abc-61a1-4fb8-89c7-1fddf3a58e9d.png)
 
 ##### 图1-6 系统配置页面
 
