--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/8. 项目管理/1. 项目管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/8. 项目管理/1. 项目管理.md
@@ -282,19 +282,19 @@ b）单击右上角的“设置”选项，选择“发版记录”，如图1-28
 
 c）在项目“发版记录”页面，您可以单击“下载执行引擎”可以下载项目执行引擎包，如图1-29所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-29.png)
+![image](https://user-images.githubusercontent.com/79617492/173549665-a1e86451-a551-4d84-bae8-e8ba6dcfdc06.png)
 
 ##### 图1-29 下载执行引擎包
 
 d）在项目“发版记录”页面，您可以单击“操作”下载项目部署包进行下载，如图1-30所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-30.png)
+![image](https://user-images.githubusercontent.com/79617492/173549685-1c0cf8fb-2e0c-4d6e-8b6f-a6b1510b4396.png)
 
 ##### 图1-30 下载项目部署包
 
 e）在项目“发版记录”页面，您可以单击“操作”下载项目源码包进行下载，如图1-31所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-31.png)
+![image](https://user-images.githubusercontent.com/79617492/173549945-db1092ab-5e73-46d6-ac96-b5218984d31f.png)
 
 ##### 图1-31 下载项目源码包
 
@@ -312,25 +312,25 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理”，系统显示“项目管理”页面，如图1-32所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-32.png)
+![image](https://user-images.githubusercontent.com/79617492/173549985-789c0f5c-133a-4ee8-860b-c8c5439a3986.png)
 
 ##### 图1-32 项目管理页面
 
 b）选择需要导出的项目，单击右上角的“设置”选项，选择“导出项目”，如图1-33所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-33.png)
+![image](https://user-images.githubusercontent.com/79617492/173550029-f3f87ba9-c385-4577-be3f-5a7dc843fb78.png)
 
 ##### 图1-33 导出项目页面
 
 c）选择导出项目的环境，单击“确定”，如图1-34所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-34.png)
+![image](https://user-images.githubusercontent.com/79617492/173550060-c53cdf1e-e99b-49d8-be85-7cf0ad06de7e.png)
 
 ##### 图1-34 选择环境页面
 
 d）在系统提示导出项目信息中选择“确定”，如图1-35所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-35.png)
+![image](https://user-images.githubusercontent.com/79617492/173550098-c503e87d-ec0d-43b3-ab15-0be59ac72768.png)
 
 ##### 图1-35 确认导出项目
 
@@ -338,7 +338,7 @@ e）导出项目包，如图1-36所示：
 
 ##### 说明：导出的项目包自动保存至本地PC默认的下载目录，您可以手工打开查看。
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-36.png)
+![image](https://user-images.githubusercontent.com/79617492/173550130-ece8ebf0-07b4-4ff5-9515-b7410364d952.png)
 
 ##### 图1-36 导出项目包
 
@@ -356,13 +356,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理”，系统显示“项目管理”页面，如图1-37所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-37.png)
+![image](https://user-images.githubusercontent.com/79617492/173550193-a2013ca4-9f61-49a0-84e0-5b359986d7bc.png)
 
 ##### 图1-37 项目管理页面
 
 b）单击“导入项目”，系统显示“导入项目”页面，填写导入项目的基本信息并上传导入的项目包，如图1-38所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1-38.png)
+![image](https://user-images.githubusercontent.com/79617492/173550239-146e1fd3-858e-4247-90c0-32b81f2b0c87.png)
 
 ##### 图1-38 上传项目包页面
 
