--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/1. 数据库设置管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/1. 数据库设置管理.md
@@ -14,19 +14,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/zc_10-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173723528-f32a71a2-37e2-4d50-a47e-dff47aefa59d.png)
 
 ##### 图1-1 数据库设计页面
 
 b）单击“新增数据库”后的` ••• `，选择“数据库设置”，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/zc_10-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173723542-b2a09480-87d6-460b-a426-0ae027c6bd67.png)
 
 ##### 图1-2 数据库设置页面
 
 c）在“数据类型配置”页面，配置数据类型的相关信息，如图1-3所示:
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/zc_10-03_img.png)
+![image](https://user-images.githubusercontent.com/79617492/173723569-76e26261-dbea-47bf-919f-444a4752f79e.png)
 
 ##### 图1-3 配置数据类型页面
 
@@ -46,31 +46,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173723592-2f0561f7-f19a-4c10-8ed4-183517469ff8.png)
 
 ##### 图1-4 数据库设计页面
 
 b）单击“新增数据库”后的` ••• `，选择“数据库设置”，系统显示“数据库设置”页面，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173723608-e65f7831-4760-4554-af73-b90dfb05ba4c.png)
 
 ##### 图1-5 数据库设置页面
 
 c）选择“默认数据列配置”，系统显示“默认数据列配置”页面，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173723621-d5003514-8039-4063-93df-4af2685c56ee.png)
 
 ##### 图1-6 默认数据列配置页面
 
 d）（可选）您可以单击“新增”，系统新增一行数据列，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1-7.png)
 
 ##### 图1-7 默认数据列配置页面
 
 e）（可选）您可以选择需要修改的数据列，进行修改数据列信息，如图1-8所示:
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_05.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1-8.png)
 
 ##### 图1-8 修改数据列
 
@@ -92,19 +92,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1-9.png)
 
 ##### 图1-9 数据库设计页面
 
 b）单击“新增数据库”后的` ••• `，选择“数据库设置”，系统显示“数据库设置”页面，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1-10.png)
 
 ##### 图1-10 数据库设置页面
 
 c）选择“表名显示配置”，系统显示“表名显示配置”页面，如图1-11所示：
 
-![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_3_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1-11.png)
 
 ##### 图1-11 表名显示配置页面
 
