--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/2. 数据库管理.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173724663-d0a709b7-8bf8-46ba-94a4-8e0516d38710.png)
 
 ##### 图2-1 数据库设计页面
 
 b）单击“新增数据库”，系统弹出“新增项目数据库”对话框，输入项目数据库名称，如图2-2所示：
 
-![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173724686-a1041c65-fb0f-4c03-95d0-546c8d06644b.png)
 
 ##### 图2-2 新增数据库
 
@@ -40,19 +40,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-3所示：
 
-![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173724704-d8df6a48-6d10-4fbb-8636-06a938b2f0e6.png)
 
 ##### 图2-3 数据库设计页面
 
 b）选择需要修改的数据库，单击如图2-4所示的红框：
 
-![2-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173724725-2edf6195-44e2-4436-a0b7-7d792726b53e.png)
 
 ##### 图2-4 新增数据库
 
 c）选择“修改数据库”，系统弹出“编辑项目数据库”对话框，输入修改的项目数据库名称，如图2-5所示：
 
-![2-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173724751-29b1f012-f926-4369-8da3-ef8e2d53e475.png)
 
 ##### 图2-5 修改数据库名称
 
@@ -72,19 +72,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-6所示：
 
-![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173724774-c4a71e8a-f364-48f9-b4af-b8d91572587b.png)
 
 ##### 图2-6 数据库设计页面
 
 b）选择需要删除的数据库，单击如图2-7所示的红框：
 
-![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173724786-4c830baa-0517-4aad-aed3-10fa7b435110.png)
 
 ##### 图2-7 选择数据库
 
 c）选择“删除数据库”，系统提示“确定删除该数据库吗？”，如图2-8所示：
 
-![2-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_3_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173724814-2616d0ba-b5bf-4884-af58-7725af85bb1f.png)
 
 ##### 图2-8 删除数据库
 
@@ -104,19 +104,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-9所示：
 
-![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173724852-5baf2a07-c95a-41dd-92c5-f01fd838f8b4.png)
 
 ##### 图2-9 数据库设计页面
 
 b）单击“新增数据库”后的` ••• `选择“显示已删除数据库”，在数据库列表显示已经删除的数据库，如图2-10所示：
 
-![2-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_4_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173724859-f6531bfe-c3a2-4d36-b9da-b2137f6aeb9f.png)
 
 ##### 图2-10 显示已经删除数据库
 
 c）单击图2-11所示的红框，选择“恢复数据库” --> 系统提示“操作成功”。
 
-![2-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_4_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-11.png)
 
 ##### 图2-11 恢复数据库
 
@@ -134,31 +134,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-12所示：
 
-![2-12](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-12.png)
 
 ##### 图2-12 数据库设计页面
 
 b）选择需要连接的数据库名称，单击如图2-13所示的红框：
 
-![2-13](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-13.png)
 
 ##### 图2-13 选择数据库
 
 c）选择“数据库连接”，系统弹出“数据库连接管理”对话框，如图2-14所示：
 
-![2-14](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-14.png)
 
 ##### 图2-14 数据库连接管理
 
 d） 单击“新增”，系统显示“新增数据库连接”页面，如图2-15所示：
 
-![2-15](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-15.png)
 
 ##### 图2-15 新增数据库连接
 
 d）配置项目数据库的相关信息，如图2-16所示：
 
-![2-16](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_05.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-16.png)
 
 ##### 图2-16 配置数据库信息
 
@@ -174,7 +174,7 @@ e）单击“测试”，测试连接的数据库是否正确。
 
 f）单击“提交”，系统提示“新增成功”信息，如图2-17所示：
 
-![2-17](https://www.feisuanyz.com/fsimage/zc-image/cz_10_2_5_06.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-17.png)
 
 ##### 图2-17 新增成功
 
@@ -192,60 +192,60 @@ f）单击“提交”，系统提示“新增成功”信息，如图2-17所示
 
 a）进入平台模块功能页面，选择“数据库设计”功能模块，系统显示“数据库设计”页面，如图2-18所示：
 
-![2-18](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_1.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-18.png)
 
-##### 图2-12 数据库设计页面
+##### 图2-18 数据库设计页面
 
 b）选中一个需导出数据库文档的数据库，单击三个点按钮，选择“导出数据库文档”，如图2-19所示：
 
-![2-19](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_2.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-19.png)
 
-##### 图2-12 选择导出数据库文档
+##### 图2-19 选择导出数据库文档
 
 c）进入“导出数据库文档”页面，如图2-20所示：
 
-![2-20](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_3.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-20.png)
 
 ##### 图2-20 导出数据库文档页面
 
 d）输入导出文档的名称（若未输入则自动生成），如图2-21所示：
 
-![2-21](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_4.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-21.png)
 
 ##### 图2-21 输入文档名称
 
 e）选择导出文档类型，有HTML、WORD、MD三种类型可以选择，如图2-22所示：
 
-![2-22](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_5.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-22.png)
 
 ##### 图2-22 选择文档类型
 
 f）选择数据库连接，如图2-23所示：
 
-![2-23](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_6.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-23.png)
 
 ##### 图2-23 选择数据库连接
 
 g）“导出数据库文档”页面显示出可供选择的数据表，如图2-24所示：
 
-![2-24](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_7.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-24.png)
 
 ##### 图2-24 数据表显示
 
 h）勾选需导出数据库文档的数据表，如图2-25所示：
 
-![2-25](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_8.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-25.png)
 
 ##### 图2-25 勾选数据表
 
 i）单击“导出”，页面下方自动生成导出文档，如图2-26所示：
 
-![2-26](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_9.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-26.png)
 
 ##### 图2-26 导出文档自动生成
 
 j）打开生成的文档，如图2-27所示：
 
-![2-27](https://www.feisuanyz.com/fsimage/zc-image/czzn_10_2_6_10.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-27.png)
 
 ##### 图2-27 导出文档示例
